--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
+        "start": "ts-node src/server.ts",
         "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
@@ -22,7 +23,9 @@
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.4.0",
         "typeorm": "0.2.45",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.4"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.3",
@@ -39,9 +42,7 @@
         "@types/swagger-ui-express": "^4.1.3",
         "babel-plugin-module-resolver": "^4.0.0",
         "babel-plugin-transform-typescript-metadata": "^0.3.0",
-        "ts-node": "^10.8.1",
         "ts-node-dev": "^2.0.0",
-        "tsconfig-paths": "^4.0.0",
-        "typescript": "^4.7.4"
+        "tsconfig-paths": "^4.0.0"
     }
 }
