--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
         "typeorm": "0.2.45",
         "uuid": "^8.3.2",
         "ts-node": "^10.8.1",
-        "typescript": "^4.7.4"
-    },
-    "devDependencies": {
+        "typescript": "^4.7.4",
         "@babel/cli": "^7.10.3",
         "@babel/core": "^7.10.3",
         "@babel/node": "^7.10.3",
@@ -44,5 +42,7 @@
         "babel-plugin-transform-typescript-metadata": "^0.3.0",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.0.0"
+    },
+    "devDependencies": {
     }
 }
